Migrate to shared astropng-core via java.lang.foreign
Moves XISF/FITS parsing, pixel stretch, resize/stamp, WCS, catalogue
lookup, and batch orchestration into astropng-core (also used, as a Rust
crate and via C ABI, by the Rust/Go/Zig ports), so the same logic isn't
hand-maintained in five places. core/Native.scala binds to its C ABI
directly via the Foreign Function & Memory API (java.lang.foreign),
stable since JDK 22 -- no JNI glue code, no header parser, hand-declared
MemoryLayouts checked against the real library. Batch's public API
(Options/FileStatus/Progress/Summary/run) is unchanged, so cli.Main and
gui.GuiApp needed no changes; BatchError moved from the deleted Post.scala
into Batch.scala since both catch it by name.

Bumps the minimum JDK from 21 to 22+ (tested against 25, the current
LTS) since FFM was preview-only on 21. Unlike Go/Zig (static linking),
this links astropng-core's cdylib (.so/.dylib/.dll) at runtime, located
via a jar-relative lookup (mirroring the deleted Catalog.appDir()
pattern) with a third_party/astropng-core/lib/ dev-convenience fallback.
No release-matrix change needed -- this repo already built natively per
OS. Added -J--enable-native-access=ALL-UNNAMED to both launcher scripts
via bashScriptExtraDefines (a jar manifest attribute only auto-applies
to `java -jar` launches, not sbt-native-packager's classpath-based
scripts) so JDK 24+ doesn't warn.